@@ -2,6 +2,8 @@
 
  - Fixed
    - Data rate calculations when using SI decimal prefixes
+   - Workaround for filled arcs not drawn correctly with some versions
+     of libgd (libgd/libgd#351)
  - New
    - C struct dump database has been replaced with sqlite database,
      full data import included from legacy databases of versions 1.3 - 1.18
